Update copywrite data for each page

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -5,213 +5,238 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
-    <title>Paterro's Kitchen | Home</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-    <link rel="icon" href="../images/pizza.png" />
-  </head>
-  <body class="is-preload landing">
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1 id="logo"><a href="index.html">Paterro's Kitchen</a></h1>
-        <nav id="nav">
-          <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="reservation.html">Reservations</a></li>
-          </ul>
-        </nav>
-      </header>
+    <head>
+        <title>Paterro's Kitchen | Home</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript
+            ><link rel="stylesheet" href="assets/css/noscript.css"
+        /></noscript>
+        <link rel="icon" href="../images/pizza.png" />
+    </head>
+    <body class="is-preload landing">
+        <div id="page-wrapper">
+            <!-- Header -->
+            <header id="header">
+                <h1 id="logo"><a href="index.html">Paterro's Kitchen</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="reservation.html">Reservations</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-      <!-- Banner -->
-      <section id="banner">
-        <div class="content">
-          <header>
-            <h2>Welcome to Paterro's Kitchen</h2>
-            <p>Where fresh ingredients and homemade recipes come together</p>
-          </header>
-          <span class="image"
-            ><img src="images/paterro.jpg" alt="Paterro"
-          /></span>
+            <!-- Banner -->
+            <section id="banner">
+                <div class="content">
+                    <header>
+                        <h2>Welcome to Paterro's Kitchen</h2>
+                        <p>
+                            Where fresh ingredients and homemade recipes come
+                            together
+                        </p>
+                    </header>
+                    <span class="image"
+                        ><img src="images/paterro.jpg" alt="Paterro"
+                    /></span>
+                </div>
+                <a href="#one" class="goto-next scrolly">Next</a>
+            </section>
+
+            <!-- One -->
+            <section id="one" class="spotlight style1 bottom">
+                <span class="image fit main"
+                    ><img src="images/section-1.jpg" alt="Main room"
+                /></span>
+                <div class="content">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 col-12-medium">
+                                <header>
+                                    <h2>Authentic Italian Cuisine</h2>
+                                    <p>
+                                        Let Anthony Paterro and his team make
+                                        you your next meal
+                                    </p>
+                                </header>
+                            </div>
+                            <div class="col-4 col-12-medium">
+                                <p>
+                                    Paterro's Kitchen is an Italian restaurant
+                                    that offers a warm and inviting atmosphere
+                                    for diners to enjoy a delicious meal. The
+                                    menu features traditional Italian dishes
+                                    made with fresh ingredients and cooked to
+                                    perfection. Standout menu items include
+                                    homemade pasta dishes, wood-fired pizzas,
+                                    and mouth-watering seafood options.
+                                </p>
+                            </div>
+                            <div class="col-4 col-12-medium">
+                                <p>
+                                    Paterro's Kitchen is known for its friendly
+                                    and attentive staff, who are dedicated to
+                                    making sure every guest has a memorable
+                                    dining experience. The restaurant's rustic
+                                    decor, complete with exposed brick walls and
+                                    dim lighting, creates a cozy and intimate
+                                    setting that is perfect for romantic dinners
+                                    or family gatherings.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#two" class="goto-next scrolly">Next</a>
+            </section>
+
+            <!-- Two -->
+            <section id="two" class="spotlight style2 right">
+                <span class="image fit main"
+                    ><img src="images/section-2.jpg" alt=""
+                /></span>
+                <div class="content">
+                    <header>
+                        <h2>Inviting Family Atmosphere</h2>
+                        <p>Let us host your next gathering</p>
+                    </header>
+                    <p>
+                        Paterro's Kitchen's dining room is warm and inviting,
+                        with a rustic decor that creates a cozy and intimate
+                        atmosphere. The exposed brick walls add to the rustic
+                        charm of the space, while the dim lighting sets a
+                        romantic and inviting ambiance.
+                    </p>
+                    <p>
+                        The room is designed to make guests feel comfortable and
+                        at home, with comfortable seating and a casual yet
+                        elegant atmosphere. The dim lighting creates a relaxing
+                        and intimate setting perfect for romantic dinners,
+                        family gatherings or any kind of occasion.
+                    </p>
+                    <ul class="actions">
+                        <li>
+                            <a href="./about.html" class="button">Learn More</a>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#three" class="goto-next scrolly">Next</a>
+            </section>
+
+            <!-- Three -->
+            <section id="three" class="spotlight style3 left">
+                <span class="image fit main bottom"
+                    ><img src="images/section-3.jpg" alt=""
+                /></span>
+                <div class="content">
+                    <header>
+                        <h2>Fresh Authentic Ingredients</h2>
+                        <p>A taste of Italy</p>
+                    </header>
+                    <p>
+                        Paterro's Kitchen's menu features a wide variety of
+                        traditional Italian dishes made with fresh ingredients
+                        and cooked to perfection. The menu is designed to
+                        showcase the best of Italian cuisine, with something to
+                        suit every taste.
+                    </p>
+                    <ul class="actions">
+                        <li>
+                            <a href="./menu.html" class="button">Learn More</a>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#four" class="goto-next scrolly">Next</a>
+            </section>
+
+            <!-- Four -->
+            <section id="four" class="wrapper style1 special fade">
+                <div class="container">
+                    <header>
+                        <h2>Join our mailing list.</h2>
+                        <p>
+                            Receive the newest updates about the restaurant.
+                            Right to your inbox.
+                        </p>
+                    </header>
+                    <form method="post" action="#" class="cta">
+                        <div class="row gtr-uniform gtr-50">
+                            <div class="col-8 col-12-xsmall">
+                                <input
+                                    type="email"
+                                    name="email"
+                                    id="email"
+                                    placeholder="Your Email Address"
+                                />
+                            </div>
+                            <div class="col-4 col-12-xsmall">
+                                <input
+                                    type="submit"
+                                    value="Submit"
+                                    class="fit alt disabled"
+                                />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="icons">
+                    <li>
+                        <a
+                            href="https://www.twitter.com"
+                            class="icon brands fa-twitter"
+                            ><span class="label">Twitter</span></a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.facebook.com"
+                            class="icon brands fa-facebook-f"
+                            ><span class="label">Facebook</span></a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.instagram.com/"
+                            class="icon brands fa-instagram"
+                            ><span class="label">Instagram</span></a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.gmail.com"
+                            class="icon solid fa-envelope"
+                            ><span class="label">Email</span></a
+                        >
+                    </li>
+                </ul>
+                <ul class="copyright">
+                    <li>&copy; Tyler McKenna 2024 | All rights reserved.</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </footer>
         </div>
-        <a href="#one" class="goto-next scrolly">Next</a>
-      </section>
 
-      <!-- One -->
-      <section id="one" class="spotlight style1 bottom">
-        <span class="image fit main"
-          ><img src="images/section-1.jpg" alt="Main room"
-        /></span>
-        <div class="content">
-          <div class="container">
-            <div class="row">
-              <div class="col-4 col-12-medium">
-                <header>
-                  <h2>Authentic Italian Cuisine</h2>
-                  <p>
-                    Let Anthony Paterro and his team make you your next meal
-                  </p>
-                </header>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p>
-                  Paterro's Kitchen is an Italian restaurant that offers a warm
-                  and inviting atmosphere for diners to enjoy a delicious meal.
-                  The menu features traditional Italian dishes made with fresh
-                  ingredients and cooked to perfection. Standout menu items
-                  include homemade pasta dishes, wood-fired pizzas, and
-                  mouth-watering seafood options.
-                </p>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p>
-                  Paterro's Kitchen is known for its friendly and attentive
-                  staff, who are dedicated to making sure every guest has a
-                  memorable dining experience. The restaurant's rustic decor,
-                  complete with exposed brick walls and dim lighting, creates a
-                  cozy and intimate setting that is perfect for romantic dinners
-                  or family gatherings.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a href="#two" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Two -->
-      <section id="two" class="spotlight style2 right">
-        <span class="image fit main"
-          ><img src="images/section-2.jpg" alt=""
-        /></span>
-        <div class="content">
-          <header>
-            <h2>Inviting Family Atmosphere</h2>
-            <p>Let us host your next gathering</p>
-          </header>
-          <p>
-            Paterro's Kitchen's dining room is warm and inviting, with a rustic
-            decor that creates a cozy and intimate atmosphere. The exposed brick
-            walls add to the rustic charm of the space, while the dim lighting
-            sets a romantic and inviting ambiance.
-          </p>
-          <p>
-            The room is designed to make guests feel comfortable and at home,
-            with comfortable seating and a casual yet elegant atmosphere. The
-            dim lighting creates a relaxing and intimate setting perfect for
-            romantic dinners, family gatherings or any kind of occasion.
-          </p>
-          <ul class="actions">
-            <li><a href="./about.html" class="button">Learn More</a></li>
-          </ul>
-        </div>
-        <a href="#three" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Three -->
-      <section id="three" class="spotlight style3 left">
-        <span class="image fit main bottom"
-          ><img src="images/section-3.jpg" alt=""
-        /></span>
-        <div class="content">
-          <header>
-            <h2>Fresh Authentic Ingredients</h2>
-            <p>A taste of Italy</p>
-          </header>
-          <p>
-            Paterro's Kitchen's menu features a wide variety of traditional
-            Italian dishes made with fresh ingredients and cooked to perfection.
-            The menu is designed to showcase the best of Italian cuisine, with
-            something to suit every taste.
-          </p>
-          <ul class="actions">
-            <li><a href="./menu.html" class="button">Learn More</a></li>
-          </ul>
-        </div>
-        <a href="#four" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Four -->
-      <section id="four" class="wrapper style1 special fade">
-        <div class="container">
-          <header>
-            <h2>Join our mailing list.</h2>
-            <p>
-              Receive the newest updates about the restaurant. Right to your
-              inbox.
-            </p>
-          </header>
-          <form method="post" action="#" class="cta">
-            <div class="row gtr-uniform gtr-50">
-              <div class="col-8 col-12-xsmall">
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Your Email Address"
-                />
-              </div>
-              <div class="col-4 col-12-xsmall">
-                <input type="submit" value="Submit" class="fit alt disabled" />
-              </div>
-            </div>
-          </form>
-        </div>
-      </section>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a href="https://www.twitter.com" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.facebook.com" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/"
-              class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.gmail.com" class="icon solid fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Tyler McKenna 2023 | All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.dropotron.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
