--- a/salon/testimonials.html
+++ b/salon/testimonials.html
@@ -5,193 +5,220 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
-    <title>Spectral Salon | Testimonials</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="icon" href="./images/barber.png" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1><a href="index.html">Spectral Salon</a></h1>
-        <nav id="nav">
-          <ul>
-            <li class="special">
-              <a href="#menu" class="menuToggle"><span>Menu</span></a>
-              <div id="menu">
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="team.html">Meet the Team</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="book.html">Book Appointment</a></li>
-                  <li><a href="testimonials.html">Testimonials</a></li>
+    <head>
+        <title>Spectral Salon | Testimonials</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <link rel="icon" href="./images/barber.png" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript
+            ><link rel="stylesheet" href="assets/css/noscript.css"
+        /></noscript>
+    </head>
+    <body class="is-preload">
+        <!-- Page Wrapper -->
+        <div id="page-wrapper">
+            <!-- Header -->
+            <header id="header">
+                <h1><a href="index.html">Spectral Salon</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li class="special">
+                            <a href="#menu" class="menuToggle"
+                                ><span>Menu</span></a
+                            >
+                            <div id="menu">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>
+                                        <a href="team.html">Meet the Team</a>
+                                    </li>
+                                    <li>
+                                        <a href="services.html">Services</a>
+                                    </li>
+                                    <li>
+                                        <a href="book.html">Book Appointment</a>
+                                    </li>
+                                    <li>
+                                        <a href="testimonials.html"
+                                            >Testimonials</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!-- Main -->
+            <article id="main">
+                <header>
+                    <h2>Customer Testimonials</h2>
+                    <p>Don't take our word for it.</p>
+                </header>
+                <section class="wrapper style2">
+                    <div class="inner">
+                        <div class="special">
+                            <h3>Mary W.</h3>
+                            <h4>01.02.2023</h4>
+                            <p>
+                                My stylist, Sarah, was so professional, fun, and
+                                welcoming. I am always skeptical when I switch
+                                salons, but this place is amazing. Their salon
+                                is so clean and the view is incredible from
+                                their building. Literally, everything about this
+                                experience was wonderful. I will be coming back
+                                for many years to come. Thanks again, Sarah and
+                                team!
+                            </p>
+                            <hr />
+                            <h3>Jessie V.</h3>
+                            <h4>12.02.2022</h4>
+                            <p>
+                                Judy is the best. The absolute best. She has
+                                been my cosmetologist for over 6 years and I
+                                would never dream of choosing anyone different.
+                                Thank you so much for your years of dedication
+                                and service ladies!
+                            </p>
+                            <hr />
+                            <h3>Wendy T.</h3>
+                            <h4>11.23.2022</h4>
+                            <p>
+                                Judy is amazing! She always makes sure my hair
+                                and nails are done to perfection. My hubby loves
+                                when I come home after seeing Judy! She truly
+                                makes me feel like a million bucks! Thanks Judy!
+                            </p>
+                            <hr />
+                            <h3>Carolann H.</h3>
+                            <h4>11.17.2022</h4>
+                            <p>
+                                I was running extremely late for my appointment
+                                last week and they still took me and got me in
+                                and out as soon as they could! I can't believe
+                                how understanding these ladies are. What a
+                                wonderful experience! Thanks again!
+                            </p>
+                            <hr />
+                            <h3>Maude F.</h3>
+                            <h4>11.02.2022</h4>
+                            <p>
+                                I always come here every Saturday and get my
+                                hair done before church on Sunday. They always
+                                make sure I look my best! My husband and
+                                children love complimenting me after I get my
+                                hair and nails done! Thank you and God bless!
+                            </p>
+                            <hr />
+                            <h3>Lisa S.</h3>
+                            <h4>10.30.2022</h4>
+                            <p>
+                                They just made my hair look amazing for
+                                Halloween this year! It looks incredible! How
+                                fun! Thanks ladies!!!
+                            </p>
+                            <hr />
+                            <h3>Miles M.</h3>
+                            <h4>10.20.2022</h4>
+                            <p>
+                                I recently visited Spectral Salon for a haircut
+                                and color, and I couldn't be happier with the
+                                results! The stylist was professional and
+                                listened to exactly what I wanted. The salon
+                                itself is modern and clean, with a relaxing
+                                atmosphere. The color came out perfect and the
+                                haircut is exactly what I asked for. I highly
+                                recommend Spectral Salon to anyone looking for a
+                                new salon experience.
+                            </p>
+                            <hr />
+                            <h3>Jill V.</h3>
+                            <h4>10.18.2022</h4>
+                            <p>
+                                I recently visited Spectral Salon for a haircut
+                                and color, and I was extremely impressed with
+                                the level of service and skill provided by the
+                                stylists. From the moment I walked in, I was
+                                greeted warmly and made to feel welcome. My
+                                stylist took the time to listen to my concerns
+                                and preferences, and she gave me a cut and color
+                                that exceeded my expectations. The salon itself
+                                was clean, comfortable, and well-appointed, and
+                                the staff were all friendly and professional. I
+                                would highly recommend Spectral Salon to anyone
+                                looking for a top-notch hair salon experience.
+                            </p>
+                            <hr />
+                            <h3>Toby F.</h3>
+                            <h4>10.02.2022</h4>
+                            <p>
+                                I was greeted by the friendly staff and offered
+                                a refreshment while I filled out my paperwork.
+                                My stylist, Sarah, took the time to consult with
+                                me and understand exactly what I wanted before
+                                getting started. The cut and color turned out
+                                exactly how I imagined and I've received
+                                numerous compliments since. The salon itself is
+                                also very clean and stylish, with a welcoming
+                                atmosphere.
+                            </p>
+                            <hr />
+                            <h3>Mary K.</h3>
+                            <h4>09.27.2022</h4>
+                            <p>
+                                I had a great experience at Spectral Salon. The
+                                staff was friendly, my stylist was attentive and
+                                my haircut and color turned out great. I highly
+                                recommend this salon.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+            </article>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="icons">
+                    <li>
+                        <a href="#" class="icon brands fa-twitter"
+                            ><span class="label">Twitter</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon brands fa-facebook-f"
+                            ><span class="label">Facebook</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon brands fa-instagram"
+                            ><span class="label">Instagram</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon solid fa-envelope"
+                            ><span class="label">Email</span></a
+                        >
+                    </li>
                 </ul>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
+                <ul class="copyright">
+                    <li>&copy; Tyler McKenna 2024</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </footer>
+        </div>
 
-      <!-- Main -->
-      <article id="main">
-        <header>
-          <h2>Customer Testimonials</h2>
-          <p>Don't take our word for it.</p>
-        </header>
-        <section class="wrapper style2">
-          <div class="inner">
-            <div class="special">
-              <h3>Mary W.</h3>
-              <h4>01.02.2023</h4>
-              <p>
-                My stylist, Sarah, was so professional, fun, and welcoming. I am
-                always skeptical when I switch salons, but this place is
-                amazing. Their salon is so clean and the view is incredible from
-                their building. Literally, everything about this experience was
-                wonderful. I will be coming back for many years to come. Thanks
-                again, Sarah and team!
-              </p>
-              <hr />
-              <h3>Jessie V.</h3>
-              <h4>12.02.2022</h4>
-              <p>
-                Judy is the best. The absolute best. She has been my
-                cosmetologist for over 6 years and I would never dream of
-                choosing anyone different. Thank you so much for your years of
-                dedication and service ladies!
-              </p>
-              <hr />
-              <h3>Wendy T.</h3>
-              <h4>11.23.2022</h4>
-              <p>
-                Judy is amazing! She always makes sure my hair and nails are
-                done to perfection. My hubby loves when I come home after seeing
-                Judy! She truly makes me feel like a million bucks! Thanks Judy!
-              </p>
-              <hr />
-              <h3>Carolann H.</h3>
-              <h4>11.17.2022</h4>
-              <p>
-                I was running extremely late for my appointment last week and
-                they still took me and got me in and out as soon as they could!
-                I can't believe how understanding these ladies are. What a
-                wonderful experience! Thanks again!
-              </p>
-              <hr />
-              <h3>Maude F.</h3>
-              <h4>11.02.2022</h4>
-              <p>
-                I always come here every Saturday and get my hair done before
-                church on Sunday. They always make sure I look my best! My
-                husband and children love complimenting me after I get my hair
-                and nails done! Thank you and God bless!
-              </p>
-              <hr />
-              <h3>Lisa S.</h3>
-              <h4>10.30.2022</h4>
-              <p>
-                They just made my hair look amazing for Halloween this year! It
-                looks incredible! How fun! Thanks ladies!!!
-              </p>
-              <hr />
-              <h3>Miles M.</h3>
-              <h4>10.20.2022</h4>
-              <p>
-                I recently visited Spectral Salon for a haircut and color, and I
-                couldn't be happier with the results! The stylist was
-                professional and listened to exactly what I wanted. The salon
-                itself is modern and clean, with a relaxing atmosphere. The
-                color came out perfect and the haircut is exactly what I asked
-                for. I highly recommend Spectral Salon to anyone looking for a
-                new salon experience.
-              </p>
-              <hr />
-              <h3>Jill V.</h3>
-              <h4>10.18.2022</h4>
-              <p>
-                I recently visited Spectral Salon for a haircut and color, and I
-                was extremely impressed with the level of service and skill
-                provided by the stylists. From the moment I walked in, I was
-                greeted warmly and made to feel welcome. My stylist took the
-                time to listen to my concerns and preferences, and she gave me a
-                cut and color that exceeded my expectations. The salon itself
-                was clean, comfortable, and well-appointed, and the staff were
-                all friendly and professional. I would highly recommend Spectral
-                Salon to anyone looking for a top-notch hair salon experience.
-              </p>
-              <hr />
-              <h3>Toby F.</h3>
-              <h4>10.02.2022</h4>
-              <p>
-                I was greeted by the friendly staff and offered a refreshment
-                while I filled out my paperwork. My stylist, Sarah, took the
-                time to consult with me and understand exactly what I wanted
-                before getting started. The cut and color turned out exactly how
-                I imagined and I've received numerous compliments since. The
-                salon itself is also very clean and stylish, with a welcoming
-                atmosphere.
-              </p>
-              <hr />
-              <h3>Mary K.</h3>
-              <h4>09.27.2022</h4>
-              <p>
-                I had a great experience at Spectral Salon. The staff was
-                friendly, my stylist was attentive and my haircut and color
-                turned out great. I highly recommend this salon.
-              </p>
-            </div>
-          </div>
-        </section>
-      </article>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon solid fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Tyler McKenna 2023</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
