--- a/restaurant/reservation.html
+++ b/restaurant/reservation.html
@@ -5,163 +5,186 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
-    <title>Paterro's Kitchen | Booking</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-    <link rel="icon" href="../images/pizza.png" />
-  </head>
-  <body class="is-preload">
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1 id="logo"><a href="index.html">Paterro's Kitchen</a></h1>
-        <nav id="nav">
-          <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="reservation.html">Reservations</a></li>
-          </ul>
-        </nav>
-      </header>
+    <head>
+        <title>Paterro's Kitchen | Booking</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript
+            ><link rel="stylesheet" href="assets/css/noscript.css"
+        /></noscript>
+        <link rel="icon" href="../images/pizza.png" />
+    </head>
+    <body class="is-preload">
+        <div id="page-wrapper">
+            <!-- Header -->
+            <header id="header">
+                <h1 id="logo"><a href="index.html">Paterro's Kitchen</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="reservation.html">Reservations</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-      <!-- Main -->
-      <div id="main" class="wrapper style1">
-        <div class="container">
-          <header class="major">
-            <h2>Reservations</h2>
-            <p>Book Your Table at Paterro's Kitchen</p>
-          </header>
+            <!-- Main -->
+            <div id="main" class="wrapper style1">
+                <div class="container">
+                    <header class="major">
+                        <h2>Reservations</h2>
+                        <p>Book Your Table at Paterro's Kitchen</p>
+                    </header>
 
-          <!-- Content -->
-          <section id="content">
-            <a href="#" class="image fit"
-              ><img src="images/table.jpg" alt="Table"
-            /></a>
-            <h3>Reservation System</h3>
-            <p>
-              We understand that planning a special evening out can be a
-              challenge, that's why we make it easy for you to reserve your
-              table at Paterro's Kitchen. Simply fill out our online reservation
-              form, and we'll take care of the rest. Our team is dedicated to
-              ensuring that you have a pleasant dining experience, whether
-              you're celebrating a special occasion or just looking for a night
-              out.
-            </p>
-            <p>
-              We look forward to welcoming you to Paterro's Kitchen, where
-              you'll enjoy a delicious meal in a warm and inviting atmosphere.
-              So why wait? Book your table now and taste the difference that
-              authentic Italian cuisine makes.
-            </p>
-          </section>
-          <section>
-            <h3>Form</h3>
-            <form method="post" action="#">
-              <div class="row gtr-uniform gtr-50">
-                <div class="col-6 col-12-xsmall">
-                  <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    value=""
-                    placeholder="Name"
-                  />
+                    <!-- Content -->
+                    <section id="content">
+                        <a href="#" class="image fit"
+                            ><img src="images/table.jpg" alt="Table"
+                        /></a>
+                        <h3>Reservation System</h3>
+                        <p>
+                            We understand that planning a special evening out
+                            can be a challenge, that's why we make it easy for
+                            you to reserve your table at Paterro's Kitchen.
+                            Simply fill out our online reservation form, and
+                            we'll take care of the rest. Our team is dedicated
+                            to ensuring that you have a pleasant dining
+                            experience, whether you're celebrating a special
+                            occasion or just looking for a night out.
+                        </p>
+                        <p>
+                            We look forward to welcoming you to Paterro's
+                            Kitchen, where you'll enjoy a delicious meal in a
+                            warm and inviting atmosphere. So why wait? Book your
+                            table now and taste the difference that authentic
+                            Italian cuisine makes.
+                        </p>
+                    </section>
+                    <section>
+                        <h3>Form</h3>
+                        <form method="post" action="#">
+                            <div class="row gtr-uniform gtr-50">
+                                <div class="col-6 col-12-xsmall">
+                                    <input
+                                        type="text"
+                                        name="name"
+                                        id="name"
+                                        value=""
+                                        placeholder="Name"
+                                    />
+                                </div>
+                                <div class="col-6 col-12-xsmall">
+                                    <input
+                                        type="email"
+                                        name="email"
+                                        id="email"
+                                        value=""
+                                        placeholder="Email"
+                                    />
+                                </div>
+                                <div class="col-6 col-12-medium">
+                                    <input
+                                        type="checkbox"
+                                        id="copy"
+                                        name="copy"
+                                    />
+                                    <label for="copy"
+                                        >Email me a copy of this message</label
+                                    >
+                                </div>
+                                <div class="col-6 col-12-medium">
+                                    <input
+                                        type="checkbox"
+                                        id="human"
+                                        name="human"
+                                        checked
+                                    />
+                                    <label for="human"
+                                        >I am a human and not a robot</label
+                                    >
+                                </div>
+                                <div class="col-12">
+                                    <textarea
+                                        name="message"
+                                        id="message"
+                                        placeholder="Please write a date and time."
+                                        rows="6"
+                                    ></textarea>
+                                </div>
+                                <div class="col-12">
+                                    <ul class="actions">
+                                        <li>
+                                            <input
+                                                type="submit"
+                                                value="Send Message"
+                                                class="primary disabled"
+                                            />
+                                        </li>
+                                        <li>
+                                            <input type="reset" value="Reset" />
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </form>
+                    </section>
                 </div>
-                <div class="col-6 col-12-xsmall">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    value=""
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="col-6 col-12-medium">
-                  <input type="checkbox" id="copy" name="copy" />
-                  <label for="copy">Email me a copy of this message</label>
-                </div>
-                <div class="col-6 col-12-medium">
-                  <input type="checkbox" id="human" name="human" checked />
-                  <label for="human">I am a human and not a robot</label>
-                </div>
-                <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Please write a date and time."
-                    rows="6"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <ul class="actions">
+            </div>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="icons">
                     <li>
-                      <input
-                        type="submit"
-                        value="Send Message"
-                        class="primary disabled"
-                      />
+                        <a
+                            href="https://www.twitter.com"
+                            class="icon brands fa-twitter"
+                            ><span class="label">Twitter</span></a
+                        >
                     </li>
-                    <li><input type="reset" value="Reset" /></li>
-                  </ul>
-                </div>
-              </div>
-            </form>
-          </section>
+                    <li>
+                        <a
+                            href="https://www.facebook.com"
+                            class="icon brands fa-facebook-f"
+                            ><span class="label">Facebook</span></a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.instagram.com/"
+                            class="icon brands fa-instagram"
+                            ><span class="label">Instagram</span></a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.gmail.com"
+                            class="icon solid fa-envelope"
+                            ><span class="label">Email</span></a
+                        >
+                    </li>
+                </ul>
+                <ul class="copyright">
+                    <li>&copy; Tyler McKenna 2024 | All rights reserved.</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </footer>
         </div>
-      </div>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a href="https://www.twitter.com" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.facebook.com" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/"
-              class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="https://www.gmail.com" class="icon solid fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Tyler McKenna 2023 | All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.dropotron.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
