--- a/salon/team.html
+++ b/salon/team.html
@@ -5,163 +5,193 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
-    <title>Spectral Salon | Meet the Team</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="icon" href="./images/barber.png" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Page Wrapper -->
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1><a href="index.html">Spectral Salon</a></h1>
-        <nav id="nav">
-          <ul>
-            <li class="special">
-              <a href="#menu" class="menuToggle"><span>Menu</span></a>
-              <div id="menu">
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="team.html">Meet the Team</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="book.html">Book Appointment</a></li>
-                  <li><a href="testimonials.html">Testimonials</a></li>
+    <head>
+        <title>Spectral Salon | Meet the Team</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <link rel="icon" href="./images/barber.png" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript
+            ><link rel="stylesheet" href="assets/css/noscript.css"
+        /></noscript>
+    </head>
+    <body class="is-preload">
+        <!-- Page Wrapper -->
+        <div id="page-wrapper">
+            <!-- Header -->
+            <header id="header">
+                <h1><a href="index.html">Spectral Salon</a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li class="special">
+                            <a href="#menu" class="menuToggle"
+                                ><span>Menu</span></a
+                            >
+                            <div id="menu">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>
+                                        <a href="team.html">Meet the Team</a>
+                                    </li>
+                                    <li>
+                                        <a href="services.html">Services</a>
+                                    </li>
+                                    <li>
+                                        <a href="book.html">Book Appointment</a>
+                                    </li>
+                                    <li>
+                                        <a href="testimonials.html"
+                                            >Testimonials</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!-- Main -->
+            <article id="main">
+                <header>
+                    <h2>Meet the team</h2>
+                    <br />
+                    <p>Meet the beauticians and stylists behind our doors</p>
+                </header>
+                <section class="wrapper style2">
+                    <div class="inner">
+                        <h3>Our Team</h3>
+                        <div class="row gtr-50 gtr-uniform">
+                            <div class="col-12">
+                                <span class="image fit"
+                                    ><img
+                                        src="images/team2.jpg"
+                                        alt="Team picture"
+                                /></span>
+                            </div>
+                            <p>
+                                Spectral Salon is a new way of caring for your
+                                hair, skin, and body. Our salon specializes in
+                                color treatments and we employ only the best
+                                colorists and stylists with the top training.
+                                Opened in 2007, we have been providing a fun,
+                                relaxed, and professional atmosphere for our
+                                growing client base.
+                            </p>
+                            <hr />
+                            <div>
+                                <h3>Ayesha Cole</h3>
+                                <div class="col-12">
+                                    <span class="image fit"
+                                        ><img
+                                            src="images/stylist1.jpg"
+                                            alt="Ayesha"
+                                    /></span>
+                                </div>
+                                <p>
+                                    Ayesha is a master stylist as well as salon
+                                    owner. She graduated from the cosmetology
+                                    program at Empire Beauty School in Malden in
+                                    1994. She has been in the salon industry for
+                                    25+ years. She loves the opportunity to make
+                                    someone look great by either changing color,
+                                    adding a few highlights, or just giving a
+                                    new haircut. Ayesha also attends regular
+                                    training classes to keep up with the latest
+                                    trends.
+                                </p>
+                            </div>
+                            <hr />
+                            <div>
+                                <h3>Sarah Bellapont</h3>
+                                <div class="col-12">
+                                    <span class="image fit"
+                                        ><img
+                                            src="images/stylist2.jpg"
+                                            alt="Sarah"
+                                    /></span>
+                                </div>
+                                <p>
+                                    Sarah has worked at Spectral Salon for 8
+                                    years. She graduated from Rob Roy Academy in
+                                    Worcester and continues to educate herself
+                                    on all the new color/cutting trends and
+                                    techniques. She strives to have every client
+                                    leave her chair feeling confident and
+                                    beautiful. She specializes in color, vivid
+                                    colors, blonding, balayage, Brazilian
+                                    Blowout, tape-in extensions and updos.
+                                </p>
+                            </div>
+                            <hr />
+                            <div>
+                                <h3>Judy Albertson</h3>
+                                <div class="col-12">
+                                    <span class="image fit"
+                                        ><img
+                                            src="images/stylist3.jpg"
+                                            alt="Judy"
+                                    /></span>
+                                </div>
+                                <p>
+                                    Judy has been doing hair since 2005. She has
+                                    traveled to Germany & Los Angeles to attend
+                                    Goldwell's International Color Zoom and
+                                    continuous, ongoing education. She leads our
+                                    education program for apprentices and
+                                    teaches many classes. She is a specialist in
+                                    double process blonde and corrective color.
+                                    She is also certified in 4 different hair
+                                    extension methods and has a large following
+                                    for her eyebrow shaping.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </article>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <ul class="icons">
+                    <li>
+                        <a href="#" class="icon brands fa-twitter"
+                            ><span class="label">Twitter</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon brands fa-facebook-f"
+                            ><span class="label">Facebook</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon brands fa-instagram"
+                            ><span class="label">Instagram</span></a
+                        >
+                    </li>
+                    <li>
+                        <a href="#" class="icon solid fa-envelope"
+                            ><span class="label">Email</span></a
+                        >
+                    </li>
                 </ul>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
+                <ul class="copyright">
+                    <li>&copy; Tyler McKenna 2024</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </footer>
+        </div>
 
-      <!-- Main -->
-      <article id="main">
-        <header>
-          <h2>Meet the team</h2>
-          <br />
-          <p>Meet the beauticians and stylists behind our doors</p>
-        </header>
-        <section class="wrapper style2">
-          <div class="inner">
-            <h3>Our Team</h3>
-            <div class="row gtr-50 gtr-uniform">
-              <div class="col-12">
-                <span class="image fit"
-                  ><img src="images/team2.jpg" alt="Team picture"
-                /></span>
-              </div>
-              <p>
-                Spectral Salon is a new way of caring for your hair, skin, and
-                body. Our salon specializes in color treatments and we employ
-                only the best colorists and stylists with the top training.
-                Opened in 2007, we have been providing a fun, relaxed, and
-                professional atmosphere for our growing client base.
-              </p>
-              <hr />
-              <div>
-                <h3>Ayesha Cole</h3>
-                <div class="col-12">
-                  <span class="image fit"
-                    ><img src="images/stylist1.jpg" alt="Ayesha"
-                  /></span>
-                </div>
-                <p>
-                  Ayesha is a master stylist as well as salon owner. She
-                  graduated from the cosmetology program at Empire Beauty School
-                  in Malden in 1994. She has been in the salon industry for 25+
-                  years. She loves the opportunity to make someone look great by
-                  either changing color, adding a few highlights, or just giving
-                  a new haircut. Ayesha also attends regular training classes to
-                  keep up with the latest trends.
-                </p>
-              </div>
-              <hr />
-              <div>
-                <h3>Sarah Bellapont</h3>
-                <div class="col-12">
-                  <span class="image fit"
-                    ><img src="images/stylist2.jpg" alt="Sarah"
-                  /></span>
-                </div>
-                <p>
-                  Sarah has worked at Spectral Salon for 8 years. She graduated
-                  from Rob Roy Academy in Worcester and continues to educate
-                  herself on all the new color/cutting trends and techniques.
-                  She strives to have every client leave her chair feeling
-                  confident and beautiful. She specializes in color, vivid
-                  colors, blonding, balayage, Brazilian Blowout, tape-in
-                  extensions and updos.
-                </p>
-              </div>
-              <hr />
-              <div>
-                <h3>Judy Albertson</h3>
-                <div class="col-12">
-                  <span class="image fit"
-                    ><img src="images/stylist3.jpg" alt="Judy"
-                  /></span>
-                </div>
-                <p>
-                  Judy has been doing hair since 2005. She has traveled to
-                  Germany & Los Angeles to attend Goldwell's International Color
-                  Zoom and continuous, ongoing education. She leads our
-                  education program for apprentices and teaches many classes.
-                  She is a specialist in double process blonde and corrective
-                  color. She is also certified in 4 different hair extension
-                  methods and has a large following for her eyebrow shaping.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </article>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon solid fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Tyler McKenna 2023</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
