Removed Quest Log project from website

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-item">
+                    <!-- <div class="project-item">
                         <h1 class="project-item-header">
                             <span class="pinkh1">Q</span>uest
                             <span class="pinkh1">L</span>og
@@ -378,7 +378,7 @@
                                 >
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="project-item">
                         <h1 class="project-item-header">
                             <span class="pinkh1">S</span>ilverpoint
